# BankChurners

./: 01_data_preparation_and_eda.ipynb  01_v2_data_preparation_and_eda.ipynb  01_v3_data_prepartion_and_eda.ipynb  02_cohort_identification_and_churn_prediction.ipynb  02_v2_cohort_identification_and_churn_prediction.ipynb  03_engagement_strategy_and_implementation.ipynb  README.md  cohort_analysis_v2.md  cohort_email_templates.md  cohort_email_templates_v2.md  correlation_attrition.txt  final_df.parquet  pyproject.toml
